aot shapefile name change

--- a/gis335_final_JamesJahraus.Rmd
+++ b/gis335_final_JamesJahraus.Rmd
@@ -384,7 +384,7 @@ coordinates(node_data) <- node_data[,c("lon", "lat")]
 # https://gis.stackexchange.com/questions/387072/r-spcrs-returns-na
 proj4string(node_data) <- CRS(sf::st_crs(4326)[[2]])
 
-# writeOGR(node_data, ".", "aot_final", driver = "ESRI Shapefile")
+# writeOGR(node_data, ".", "aot_tsys01", driver = "ESRI Shapefile")
 ```
 
 
