--- a/gis335_presentation_JamesJahraus.Rmd
+++ b/gis335_presentation_JamesJahraus.Rmd
@@ -217,3 +217,141 @@ proj4string(node_data) <- CRS(sf::st_crs(4326)[[2]])
 
 writeOGR(node_data, ".", "pres_tsys01", driver = "ESRI Shapefile")
 ```
+
+
+## Explore Final Temperature Data GeoDa
+
+
+### Investigate Outliers and Patterns
+
+* Generate box plot for tsys01
+
+> Goal explore the distribution of tsys01.
+
+
+* Generate a bubble map for tsys01
+
+> Goal explore x y temp pattern
+
+
+### Investigate Spatial Autocorrelation
+
+* Space - Univariate Moran's I
+
+> Goal determine spatial autocorrelation of temp nodes
+
+**Generate Weights file GeoDa Tools > Weights Manager**
+
+[L4: Spatial Autocorrelation](https://www.e-education.psu.edu/geog586/node/524)
+
+*Weights file we need a representation of the contiguity structure of the map,*
+*that is, which map units are neighbors to each other.*
+
+*Cases in the upper-right quadrant indicate nodes temps, and local average node temps*
+*are higher than overall average node temps.*
+
+*Cases in the lower-left quadrand indicate node temps, and local average node temps*
+*are lower than overall average node temps.*
+
+**We expect temperature readings for sensors close to each other to be similar, and**
+**temperature readings for sensors far from each other to be different.**
+
+Because there is spatial autocorrelation with the tsys01 data we can use Kriging
+to interpolate the temperature surface.
+
+
+## Interpolate a Temperature Surface
+
+**Choose the Hour for Node Data**
+
+```{r krig, echo=FALSE}
+library(sp) #spatial data wrangling & analysis
+library(rgdal) #spatial data wrangling
+library(rgeos) #spatial data wrangling & analytics
+library(tidyverse) # data wrangling
+library(tmap) #modern data visualizations
+library(leaflet) #modern data visualizations
+library(lubridate) #data wrangling
+library(raster) #spatial raster data wrangling
+library(gstat) #kriging and geostatistics
+
+# Clear Workspace
+rm(list = ls())
+
+# Read Data
+sensor_data <- read.csv("Data/data.csv.gz")
+nodes <- read.csv("Data/nodes.csv")
+chiCA <- readOGR("Data","ChiComArea", verbose = FALSE)
+
+# Fix timestamp so GeoDa doesn't crash on import
+sensor_data$timestamp <- ymd_hms(sensor_data$timestamp)
+nodes$start_timestamp <- ymd_hms(nodes$start_timestamp)
+nodes$end_timestamp <- ymd_hms(nodes$end_timestamp)
+
+# Filter Sensors by Sensor for hour
+fhour <- 14 # filter hour
+ptitle <- "Exp Krig Avg Temp 2018-08-25 between 14:00 and 15:00"
+
+
+# tsys01 temperature C
+temp_tsys01 <- sensor_data %>%
+  filter(sensor == "tsys01") %>%
+  filter(parameter == "temperature") %>%
+  filter(hour(timestamp) >= fhour) %>%
+  filter(fhour >= hour(timestamp)) %>%
+  group_by(node_id) %>%
+  summarize(t_tsys01 = mean(value_hrf))
+
+# Remove outlier nodes 001e0610e809, and 001e0611536c
+temp_tsys01 <- subset(temp_tsys01, node_id != "001e0610e809")
+temp_tsys01 <- subset(temp_tsys01, node_id != "001e0611536c")
+
+# Join Sensor Data by Nodes
+node_data <- merge(temp_tsys01, nodes, by = c("node_id"))
+
+# Convert node data to spatial object
+coordinates(node_data) <- node_data[,c("lon", "lat")]
+
+# generate a grid from Chicago area
+pt2grid <- function(ptframe,n) {
+  bb <- bbox(ptframe)  
+  ptcrs <- proj4string(ptframe)  
+  xrange <- abs(bb[1,1] - bb[1,2])  
+  yrange <- abs(bb[2,1] - bb[2,2])  
+  cs <- c(xrange/n,yrange/n)  
+  cc <- bb[,1] + (cs/2)  
+  dc <- c(n,n)  
+  x1 <- GridTopology(cellcentre.offset=cc,cellsize=cs,cells.dim=dc)  
+  x2 <- SpatialGrid(grid=x1,proj4string=CRS(ptcrs))
+  return(x2)
+}
+
+# plot 100 x 100 cell grid
+chi.grid <- pt2grid((chiCA),100)
+
+# set data to the same projection
+# proj4string(node.temps) <- CRS("+init=epsg:4326")
+# Error in CRS("+init=epsg:4326") : NA
+# https://gis.stackexchange.com/questions/387072/r-spcrs-returns-na
+proj4string(node_data) <- CRS(sf::st_crs(4326)[[2]])
+proj4string(chiCA) <- CRS(sf::st_crs(4326)[[2]])
+proj4string(chi.grid) <- CRS(sf::st_crs(4326)[[2]])
+
+# variogram
+tmp.vgm <- variogram(node_data$t_tsys01 ~ 1, node_data)
+
+# plot exponential model
+tmp.fit.exp<- fit.variogram(tmp.vgm, model=vgm("Exp"))
+
+# prepare exponential
+temp.kriged.exp <- krige(node_data$t_tsys01 ~ 1, node_data, chi.grid, model = tmp.fit.exp, debug.level = 0)
+chi.temp.kriged.exp <- temp.kriged.exp[chiCA,]
+
+# plot exponential krig
+m.exp <- tm_shape(chi.temp.kriged.exp) +
+  tm_raster("var1.pred", style = "jenks", title = "Temperature (C)", palette = "BuPu") + tm_shape(node_data) + tm_dots(size=0.01) +
+  tm_layout(main.title = ptitle, main.title.size = 1.1) +
+  tm_legend(position = c("left", "bottom"))
+
+tmap_arrange(m.exp)
+```
